--- a/learning_logs/templates/learning_logs/base.html
+++ b/learning_logs/templates/learning_logs/base.html
@@ -1,6 +1,18 @@
-<p>
-    <a href="{% url 'learning_logs:index' %}">Learning Log</a>
-    <a href="{% url 'learning_logs:topics' %}">Tematy</a>
-</p>
+<!DOCTYPE html>
+<html lang="PL">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
+    {% block title %} {% endblock %}
+    <p>
+        <a href="{% url 'learning_logs:index' %}">Learning Log</a> - 
+        <a href="{% url 'learning_logs:topics' %}">Tematy</a>
+    </p>
 
 {% block content %} {% endblock content %}
+</body>
+</html>
