--- a/learning_logs/templates/learning_logs/base.html
+++ b/learning_logs/templates/learning_logs/base.html
@@ -10,7 +10,14 @@
     {% block title %} {% endblock %}
     <p>
         <a href="{% url 'learning_logs:index' %}">Learning Log</a> - 
-        <a href="{% url 'learning_logs:topics' %}">Tematy</a>
+        <a href="{% url 'learning_logs:topics' %}">Tematy</a> - 
+        {% if user.is_authenticated %}
+            Witaj, {{ user.username }}.
+            <a href="{% url 'users:logout' %}">Wyloguj</a>
+        {% else %}
+            <a href="{% url 'users:register' %}">Rejestruj</a> - 
+            <a href="{% url 'users:login' %}">Zaloguj</a>
+        {% endif %}
     </p>
 
 {% block content %} {% endblock content %}
