Ready to deploy on Heroku

--- a/learning_logs/templates/learning_logs/index.html
+++ b/learning_logs/templates/learning_logs/index.html
@@ -6,7 +6,8 @@
         <p class="lead">Załóż konto, aby rozpocząć korzystanie z aplikacji
             Learning Log oraz wyświetlić listę poznawanych tematów. Gdy
             nauczysz się czegoś nowego na dany temat, utwórz wpis
-            podsumowujący to, czego się nauczyłeś.
+            podsumowujący to, czego się nauczyłeś.<br>
+            Aplikacja powstała na podstawie książki: Eric Matthes <a href="https://helion.pl/ksiazki/python-instrukcje-dla-programisty-wydanie-ii-eric-matthes,blkpy2.htm#format">"Python Instrukcje dla programisty wydanie II"</a> wydawnictwa <a href="http://helion.pl">Helion</a>.
         </p>
         <a class="btn btn-lg btn-primary" href="{% url 'users:register' %}" role="button">Zarejestruj konto &raquo;</a>
 </div>
